@@ -1,3 +1,12 @@
+2007-01-14  Keishi Suenaga <skeishi@yahoo.co.jp>
+
+    * timidity/flac_a.c
+      timidity/gogo_a.c
+      timidity/speex_a.c
+      timidity/vorbis_a.c
+      timidity/wave_a.c
+      timidity/output_a.c: fix for autofilename
+
 2007-01-13  Keishi Suenaga <skeishi@yahoo.co.jp>
 
     * timidity/wave_a.c: fix for server interface.
